style(details): fix header wrap

--- a/app/film-database/components/movie/_fdDetails.scss
+++ b/app/film-database/components/movie/_fdDetails.scss
@@ -54,6 +54,9 @@
       @include m.fdFontXXL;
       text-transform: uppercase;
       text-shadow: var(--fd-font-shadow);
+      @media (max-width: 650px) {
+        white-space: wrap;
+      }
     }
     & button svg {
       width: 1.6em;
@@ -132,11 +135,6 @@
           grid-area: 2 / 1 / 3 / 3;
           font-weight: 700;
           letter-spacing: 0.03em;
-        }
-      }
-      @media (max-width: 650px) {
-        &:nth-of-type(2) {
-          white-space: wrap;
         }
       }
     }
